@@ -19,6 +19,14 @@ class String
     end
   end
   
+  def downcase_first
+    self[0..0].downcase + self[1..-1]
+  end
+  
+  def underscorize
+    gsub(" ", "_").downcase
+  end  
+  
   def channelname?
     if /\A[#&+!]/ =~ self
       true
